# freally-central

./: .gitattributes  .gitignore  Build-Prompts-Guide.md  CHANGELOG.md  Cargo.toml  EMBEDDING.md  Freally-Central-Feature-Roadmap.md  LICENSE  README.md  deny.toml  package-lock.json  package.json  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
catalog/: freally-central.json
crates/freally-central-engine/: Cargo.toml
crates/freally-central-engine/src/: detect.rs  download.rs  install.rs  lib.rs  platform.rs
docs/: changelog.html  documentation.html  index.html  styles.css
images/: README.md
scripts/: ci-local.mjs
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  detect.rs  download.rs  install.rs  lib.rs  main.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: downloads.spec.ts  helpers.ts  install.spec.ts  releases.spec.ts  smoke.spec.ts
ui/scripts/: i18n-lint.mjs
ui/src/: App.tsx  main.tsx  theme.ts
ui/src/api/: commands.ts  types.ts
ui/src/catalog/: loader.test.ts  loader.ts  localize.ts
ui/src/components/: AppIcon.tsx  CardGrid.tsx  ChangelogView.tsx  DetailView.tsx  EulaGate.tsx  Hub.tsx  Modal.tsx  ProductCard.tsx  ProgressBar.tsx  StatusBadge.tsx  Toolbar.tsx  TopBar.tsx
ui/src/downloads/: engine.ts  messages.ts  pickInstaller.test.ts  progress.test.ts  progress.ts  types.ts  useDownloads.test.tsx  useDownloads.ts
ui/src/i18n/: index.tsx  localeNames.ts
ui/src/i18n/locales/: ar.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  hi.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  nl.ftl  pl.ftl  pt-BR.ftl  ru.ftl  tr.ftl  uk.ftl  vi.ftl  zh-CN.ftl
ui/src/install/: detect.ts  semver.test.ts  semver.ts  types.ts  useInstalled.ts
ui/src/legal/: eula.md
ui/src/panel/: CentralPanel.tsx  CentralPanel.viewonly.test.tsx  host.ts  i18n.tsx  index.ts  panel.css  useFocusTrap.test.tsx  useFocusTrap.ts
ui/src/panel/catalog/: loader.ts  localize.ts  types.ts
ui/src/panel/components/: CardGrid.tsx  ChangelogView.tsx  DetailView.tsx  LiveRegion.tsx  Modal.tsx  ProductCard.tsx  StatusBadge.tsx  Toolbar.tsx
ui/src/panel/downloads/: engine.ts  messages.ts  pickInstaller.ts  useDownloads.test.tsx  useDownloads.ts
ui/src/panel/install/: detect.ts  status.test.ts  status.ts  useInstalled.ts
ui/src/panel/locales/: ar.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  hi.ftl  id.ftl  it.ftl  ja.ftl  ko.ftl  nl.ftl  pl.ftl  pt-BR.ftl  ru.ftl  tr.ftl  uk.ftl  vi.ftl  zh-CN.ftl
ui/src/panel/releases/: github.ts  types.ts
ui/src/panels/: About.tsx  Settings.tsx  Updates.tsx  WhatsNew.tsx
ui/src/releases/: format.ts  github.test.ts  github.ts  types.ts  useReleases.test.tsx  useReleases.ts
ui/src/styles/: global.css
ui/src/test/: setup.ts
