[package]
name = "freally-central"
version = "0.5.0"
description = "One hub for every Freally-brand app."
authors = ["Mike Weaver (Havoc Software)"]
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/MikesRuthless12/freally-central"
edition = "2021"
publish = false
rust-version = "1.77"

[lib]
name = "freally_central_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Download engine (Phase 4 / FC-30) — all already in the tree via the updater
# plugin, so these add no new transitive code, only direct access to it.
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "process", "time", "macros"] }

[target."cfg(windows)".dependencies]
winreg = "0.56.0"
